# cobot_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/clearpath_bt_joy/lib/clearpath_bt_joy/: clearpath_bt_joy_cutoff_node
install/clearpath_bt_joy/share/clearpath_bt_joy/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/clearpath_config/share/clearpath_config/: package.sh  package.xml
install/clearpath_control/share/clearpath_control/: local_setup.sh  package.sh  package.xml
install/clearpath_customization/share/clearpath_customization/: local_setup.sh  package.sh
install/warebot/share/warebot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warebot/share/warebot/config/: ros2_control.yaml
install/warebot/share/warebot/description/: husky_a200.urdf.xacro  robot.urdf.xacro  ros2_control.urdf.xacro
install/warebot/share/warebot/description/a200/attachments/: sensor_arch.urdf.xacro
install/warebot/share/warebot/description/a200/drivetrain/wheels/: indoor.urdf.xacro  outdoor.urdf.xacro
install/warebot/share/warebot/launch/: display.launch.py  rviz_only.launch.py
log/: latest_build
src/install/: local_setup.sh  setup.sh  setup.zsh
src/log/: latest_build
src/warebot/: setup.py
src/warebot/config/: display.rviz  ros2_control.yaml
src/warebot/description/: robot.urdf.xacro  ros2_control.urdf.xacro
src/warebot/description/a200/: a200.urdf.xacro
src/warebot/launch/: display.launch.py  rsp.launch.py
src/warebot/world/: empty.world
(+169 files in other folders)
